--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,6 +13,10 @@
 <li>
       <a href="/api/v1/auth/">Autenticacion</a>
     </li>
+<li>
+      <a href="/api/v1/discover/">Contenido general</a>
+    </li>
+
 
 
 
