--- a/src/views/content.hbs
+++ b/src/views/content.hbs
@@ -79,7 +79,7 @@
 <hr>
 <div>
         <h2>Endpoint: /api/v1/trending/:plataforma</h2>
-        <p>Trae un mix de 10 peliculas y series que esten en tendencia, por plataforma</p>
+        <p>Trae un mix de 10 peliculas y series que esten en tendencia, por plataforma, puede recibir "netflix", "prime", "disney", "hbomax"</p>
 
         <div class="endpoint">
             <h3>Método HTTP</h3>
@@ -141,7 +141,72 @@
 </pre>
         </div>
 
-</div>    </section>
+</div> 
+<div>
+        <h2>Endpoint: /api/v1/trending/genre/:genero</h2>
+        <p>Trae un mix de 10 peliculas y series que esten tendencia por genero, permite los siguientes "action", "drama", "horror", "romance"</p>
+
+        <div class="endpoint">
+            <h3>Método HTTP</h3>
+            <code>GET</code>
+
+            <h3>URL</h3>
+            <code>/api/v1/trending/genre/:genero</code>
+        </div>
+
+        <div class="request-example">
+            <h3>Ejemplo de solicitud</h3>
+            <code>
+                curl -X GET
+                -H "Content-Type: application/json"
+                https://streamview.onrender.com/api/v1/trending/genre/romance
+            </code>
+        </div>
+
+        <div class="response-example">
+            <h3>Ejemplo de respuesta</h3>
+  <pre>
+            <code>
+[
+  {
+    "backdrop_path": "https://image.tmdb.org/t/p/original//218ZehBKlH8efPRRccmB7bu0oLQ.jpg",
+    "first_air_date": "2023-09-25",
+    "genre_ids": [35, 9648, 10766, 18],
+    "id": 219109,
+    "name": "Elas por Elas",
+    "origin_country": ["BR"],
+    "original_language": "pt",
+    "original_name": "Elas por Elas",
+    "overview": "",
+    "popularity": 3261.262,
+    "poster_path": "https://image.tmdb.org/t/p/original//m0cvvnhnRXdQhLARx7qt9lz7hTE.jpg",
+    "vote_average": 5.7,
+    "vote_count": 29
+  },
+  {
+    "backdrop_path": "https://image.tmdb.org/t/p/original//eWF3oRyL4QWaidN9F4uvM7cBJUV.jpg",
+    "first_air_date": "2005-10-13",
+    "genre_ids": [10766],
+    "id": 206559,
+    "name": "Binnelanders",
+    "origin_country": ["ZA"],
+    "original_language": "af",
+    "original_name": "Binnelanders",
+    "overview": "",
+    "popularity": 2158.43,
+    "poster_path": "https://image.tmdb.org/t/p/original//v9nGSRx5lFz6KEgfmgHJMSgaARC.jpg",
+    "vote_average": 5.4,
+    "vote_count": 19
+  },
+      ...]
+    </code>
+    </pre>
+
+        </div>
+
+</div>
+
+</section>
 
     <footer>
         <p>© 2023 Documentación de API</p>
