--- a/src/views/content.hbs
+++ b/src/views/content.hbs
@@ -206,6 +206,72 @@
 
 </div>
 
+
+  <hr>
+  <hr>
+  <hr>
+
+  <div>
+        <h2>Endpoint: /api/v1/trending/actors</h2>
+        <p>Trae un mix de 10 actores que esten en tendencia</p>
+
+        <div class="endpoint">
+            <h3>Método HTTP</h3>
+            <code>GET</code>
+
+            <h3>URL</h3>
+            <code>/api/v1/trending/actors</code>
+        </div>
+
+        <div class="request-example">
+            <h3>Ejemplo de solicitud</h3>
+            <code>
+                curl -X GET
+                -H "Content-Type: application/json"
+                https://streamview.onrender.com/api/v1/trending/actors
+            </code>
+        </div>
+
+        <div class="response-example">
+            <h3>Ejemplo de respuesta</h3>
+<pre>
+            <code>
+[
+ {
+    "adult": false,
+    "id": 974169,
+    "name": "Jenna Ortega",
+    "original_name": "Jenna Ortega",
+    "media_type": "person",
+    "popularity": 135.437,
+    "gender": 1,
+    "known_for_department": "Acting",
+    "profile_path": "https://image.tmdb.org/t/p/original//7oUAtVgZU0uLdUSvDHKkINt1y7Y.jpg",
+    "known_for": [
+      {
+        "adult": false,
+        "backdrop_path": "/iHSwvRVsRyxpX7FE7GbviaDvgGZ.jpg",
+        "id": 119051,
+        "name": "Miércoles",
+        "original_language": "en",
+        "original_name": "Wednesday",
+        "overview": "Miércoles Addams, lista, sarcástica y un poco muerta por dentro, investiga una oleada de asesinatos mientras hace amigos —y enemigos— en la Academia Nunca Más.",
+        "poster_path": "/q6j9Dn3iiXoCjpVitDppNNZXwVq.jpg",
+        "media_type": "tv",
+        "genre_ids": [10765, 9648, 35],
+        "popularity": 417.109,
+        "first_air_date": "2022-11-23",
+        "vote_average": 8.523,
+        "vote_count": 7768,
+        "origin_country": ["US"]
+      },
+            ...]
+
+            </code>
+</pre>
+        </div>
+
+</div>
 </section>
 
     <footer>
