--- a/src/views/discover.hbs
+++ b/src/views/discover.hbs
@@ -87,7 +87,7 @@
 <hr>
 <div>
 
-        <h2>Endpoint: /api/v1/discover/filter/:genero/:pagina</h2>
+        <h2>Endpoint: /api/v1/discover/filter/genre/:genero/:pagina</h2>
         <p>Endpoint para filtrar por genero, recibe "action", "horror", "romance", "drama", y numeros para la paginacion</p>
 
         <div class="endpoint">
@@ -103,7 +103,7 @@
             <code>
                 curl -X GET
                 -H "Content-Type: application/json"
-                https://streamview.onrender.com/api/v1/discover/filter/horror/2
+                https://streamview.onrender.com/api/v1/discover/filter/genre/horror/2
             </code>
         </div>
 
@@ -124,6 +124,47 @@
         </div>
 
 </div>
+<hr> 
+<div>
+
+        <h2>Endpoint: /api/v1/discover/filter/platform/:plataforma/:pagina</h2>
+        <p>Endpoint para filtrar por plataforma, recibe "netflix", "hbomax", "disney" y "prime"</p>
+
+        <div class="endpoint">
+            <h3>Método HTTP</h3>
+            <code>GET</code>
+
+            <h3>URL</h3>
+            <code>/api/v1/discover/filter/platform/:plataforma/:pagina</code>
+        </div>
+
+        <div class="request-example">
+            <h3>Ejemplo de solicitud</h3>
+            <code>
+                curl -X GET
+                -H "Content-Type: application/json"
+                https://streamview.onrender.com/api/v1/discover/filter/platform/netflix/1
+            </code>
+        </div>
+
+        <div class="response-example">
+            <h3>Ejemplo de respuesta</h3>
+    <pre>
+            <code>
+
+[
+  {
+    "data": [
+          "movies": [...],
+          "series": [...],
+        ]
+               
+}            </code>
+  </pre>
+        </div>
+
+</div>
+
   <hr> 
   <div>
 
