new feature for adding list to a user

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -17,6 +17,10 @@
       <a href="/api/v1/discover/">Contenido general</a>
     </li>
 
+li>
+      <a href="/api/v1/lists/">Listas de favoritos</a>
+    </li>
+
 
 
 
