--- a/src/views/lists.hbs
+++ b/src/views/lists.hbs
@@ -63,7 +63,7 @@
 <div>
 
         <h2>Endpoint: /api/v1/favourites</h2>
-        <p>Endpoint para filtrar por genero, recibe "action", "horror", "romance", "drama", y numeros para la paginacion</p>
+        <p>Endpoint para agregar una pelicula o serie en la lista de favoritos, requiere de un objeto tal como se especifica en el ejemplo de solicitud</p>
 
         <div class="endpoint">
             <h3>Método HTTP</h3>
