--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ body {
 			rgba(240, 240, 240, 0.5) 50%,
 			rgba(255, 255, 255, 0) 80%
 		),
-		rgb(172, 167, 167);
+		rgb(143, 141, 141);
 	background-repeat: repeat-y;
 	background-size: 50px 500px;
 	background-position: 0 0;
@@ -76,4 +76,10 @@ body {
 	to {
 		background-position: 100% 0;
 	}
+}
+.limited-text {
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
 }
