--- a/src/components/preloader/preloader.css
+++ b/src/components/preloader/preloader.css
@@ -10,7 +10,7 @@
 	flex-wrap: wrap;
 	width: auto;
 	height: 5%;
-	animation: growLogo 1s ease-out;
+	animation: growLogo 1s ease-out forwards;
 }
 
 .icono {
@@ -21,10 +21,11 @@
 }
 
 .rotating-square {
+	border-radius: 2rem;
 	width: 100%;
 	height: 80%;
 	transform-origin: center;
-	animation: rotateSquare 1s ease-out;
+	animation: rotateSquare 1s linear infinite;
 }
 
 .text {
@@ -52,9 +53,11 @@
 
 @keyframes rotateSquare {
 	0% {
-		transform: rotate(200deg);
+		transform: rotate(0deg);
 	}
-
+	50% {
+		transform: rotate(180deg);
+	}
 	100% {
 		transform: rotate(360deg);
 	}
