--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@800&display=swap');
+
 body {
 	font-family: 'Roboto Flex', sans-serif;
 }
